<resources>
    <string name="app_name">ToDoApplication</string>
    <string name="action_settings">Settings</string>
    <string name="enter_title">Enter Title:</string>
    <string name="enter_description">Enter Description:</string>
    <string name="enter_due_date">Enter Due Date:</string>
    <string name="enter_today_s_date">Enter Today\'s Date:</string>
    <string name="submit">Submit</string>
</resources>
